--- a/src/components/recommendedGuides/recommendedGuides.css
+++ b/src/components/recommendedGuides/recommendedGuides.css
@@ -5,6 +5,7 @@
 
 .waw__rec-guides-container {
     display: flex;
+    align-content: space-evenly;
     flex-direction: column;
     padding: 1rem 1rem;
     margin: 1rem 0rem 2rem;
@@ -13,6 +14,7 @@
     border-radius: 5px;
     border: 1px solid grey;
     flex-wrap: wrap;
+    width: 58rem;
 }
 
 .waw__rec-guides-main-div {
@@ -21,14 +23,15 @@
 }
 
 .waw__rec-guide {
-    margin: 0.5rem;
+    margin: 0.3rem 0.8rem;
     display: flex;
     flex-direction: column;
-    padding: 0rem 1rem;
+    padding: 0rem 0.5srem;
     border: 1px solid grey;
     background: var(--color-bg);
     border-radius: 5px;
-    width: 13rem;
+    width: 12rem;
+    height: 10.5rem;
     transition: all 0.25s ease-in-out;
 }
 
@@ -41,13 +44,13 @@
 .waw__rec-guides-img-div {
     display: flex;
     justify-content: center;
-    margin: 0.6rem 0rem 0.5rem;
+    margin: 0.4rem 0rem 0.1rem;
 }
 
 .waw__rec-guides-container div div img {
     /* padding: 0.7rem 0rem 0.4rem; */
-    height: 130px;
-    width: 130px;
+    height: 80px;
+    width: 80px;
     border-radius: 15px;
     border: 1px solid grey;
 }
@@ -60,7 +63,7 @@
     border-bottom: 1px solid grey;
     width: 21rem;
     min-width: 21rem;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .waw__rec-guides-details {
@@ -135,8 +138,8 @@
 
     .waw__rec-guides-container div div img {
         /* padding: 0.7rem 0rem 0.4rem; */
-        height: 100px;
-        width: 100px;
+        height: 70px;
+        width: 70px;
         border-radius: 15px;
         border: 1px solid grey;
     }
@@ -205,11 +208,11 @@
         margin: 0.5rem;
         display: flex;
         flex-direction: column;
-        padding: 0rem 1rem;
+        padding: 0rem 0.5rem;
         border: 1px solid grey;
         background: var(--color-bg);
         border-radius: 5px;
-        width: 16rem;
+        width: 15rem;
         transition: all 0.25s ease-in-out;
     }
 
@@ -227,8 +230,8 @@
 
     .waw__rec-guides-container div div img {
         /* padding: 0.7rem 0rem 0.4rem; */
-        height: 120px;
-        width: 120px;
+        height: 70px;
+        width: 70px;
         border-radius: 15px;
         border: 1px solid grey;
     }
@@ -320,8 +323,8 @@
 
     .waw__rec-guides-container div div img {
         /* padding: 0.7rem 0rem 0.4rem; */
-        height: 120px;
-        width: 120px;
+        height: 70px;
+        width: 70px;
         border-radius: 15px;
         border: 1px solid grey;
     }
@@ -390,7 +393,7 @@
         margin: 0.2rem;
         display: flex;
         flex-direction: column;
-        padding: 0rem 0.5rem;
+        padding: 0rem 0.7rem;
         border: 1px solid grey;
         background: var(--color-bg);
         border-radius: 5px;
@@ -407,13 +410,13 @@
     .waw__rec-guides-img-div {
         display: flex;
         justify-content: center;
-        margin: 0.6rem 0rem 0.5rem;
+        margin: 0.6rem 0rem 0.2rem;
     }
 
     .waw__rec-guides-container div div img {
         /* padding: 0.7rem 0rem 0.4rem; */
-        height: 100px;
-        width: 100px;
+        height: 70px;
+        width: 70px;
         border-radius: 15px;
         border: 1px solid grey;
     }
@@ -481,7 +484,7 @@
         margin: 0.2rem;
         display: flex;
         flex-direction: column;
-        padding: 0rem 0.5rem;
+        padding: 0rem 0.7rem;
         border: 1px solid grey;
         background: var(--color-bg);
         border-radius: 5px;
@@ -503,8 +506,8 @@
 
     .waw__rec-guides-container div div img {
         /* padding: 0.7rem 0rem 0.4rem; */
-        height: 90px;
-        width: 90px;
+        height: 75px;
+        width: 75px;
         border-radius: 15px;
         border: 1px solid grey;
     }
@@ -542,9 +545,11 @@
 
     .waw__rec-guides-details h4 {
         color: white;
+        font-size: 15px;
     }
 
     .waw__rec-guides-details p {
         color: #60efff;
+        font-size: 15px;
     }
 }
